data/all_generated_tests/raw_wast_tests/br_table_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2571.wast
;; 10. **Unaligned Operand Stack after Cross-Module Call:**    - Sequence calls to exported functions followed by `br_table`, ensuring the operand stack alignment mismatches expected types.    - **Constraint Checked:** Ensures the operand stack does not get corrupted after control flow transitions from exported function calls followed by `br_table`.    - **Reasoning:** Tests how well `br_table` maintains stack integrity and type consistency through control flow changes involving exports.

(assert_invalid
  (module
    (func (export "foo") (param i32) (result i32)
      (block (result i32)
        (loop (result i32)
          (br_table 0 1 (i32.const 1) (local.get 0))
        )
      )
    )
    (func
      (call 0 (i32.const 1))
      (i32.const 0) 
      (br_table 0 1 (i32.const 2))
    )
  )
  "type mismatch"
)